--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
-decoupler==1.6.0
-giotto_ph==0.2.2
-GraphRicciCurvature==0.5.3.2
-gudhi==3.9.0
-matplotlib==3.7.5
-natsort==8.4.0
-networkit==11.0
-networkx==3.1
-numpy==1.24.4
-pandas==2.0.3
-persim==0.3.5
-plotly==5.22.0
-POT==0.9.3
-scanpy==1.9.8
-scikit_dimension==0.3.4
-scikit_learn==1.3.2
-scipy==1.10.1
-seaborn==0.13.2
-tqdm==4.66.4
-umap_learn==0.5.6
+asttokens==3.0.0
+comm==0.2.2
+debugpy==1.8.11
+decorator==5.1.1
+exceptiongroup==1.2.2
+executing==2.1.0
+ipykernel==6.29.5
+ipython==8.30.0
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+networkx==3.4
+packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pyzmq==26.2.0
+six==1.17.0
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+wcwidth==0.2.13
