--- a/requirements.txt
+++ b/requirements.txt
@@ -1,240 +1,11 @@
-absl-py==2.1.0
-anyio==4.2.0
-appdirs==1.4.4
-apturl==0.5.2
-argcomplete==1.8.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-bleach==6.1.0
-blessings==1.7
-blinker==1.4
-Brlapi==0.8.3
-Brotli==1.0.9
-catkin-pkg-modules==1.0.0
-certifi==2020.6.20
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-click==8.0.3
-colorama==0.4.4
-comm==0.2.1
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.2.18
-debugpy==1.8.1
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.7.1
-distlib==0.3.4
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docopt==0.6.2
-docutils==0.17.1
-duplicity==0.8.21
-empy==3.3.4
-entrypoints==0.4
-exceptiongroup==1.2.0
-executing==2.0.1
-fasteners==0.14.1
-fastjsonschema==2.19.1
-filelock==3.6.0
-flake8==4.0.1
-fonttools==4.29.1
-fqdn==1.5.1
-fs==2.4.12
-future==0.18.2
-gast==0.5.2
-giotto-ph==0.2.4
-gpustat==0.6.0
-grpcio==1.62.1
-gyp==0.1
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.3
-httplib2==0.20.2
-httpx==0.26.0
-idna==3.3
-importlib-metadata==4.6.4
-iniconfig==1.1.1
-ipykernel==6.29.2
-ipython==8.21.0
-ipywidgets==8.1.2
-isoduration==20.11.0
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.3
-joblib==1.4.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==7.4.9
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.1
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.3
-jupyterlab_widgets==3.0.10
-kaggle==1.5.16
-keyring==23.5.0
-kiwisolver==1.3.2
-language-selector==0.1
-lark==1.1.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-llvmlite==0.43.0
-lockfile==0.12.2
-louis==3.20.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.3
-Markdown==3.5.2
-MarkupSafe==2.1.5
-matplotlib==3.5.1
-matplotlib-inline==0.1.6
-mccabe==0.6.1
-mistune==3.0.2
-monotonic==1.6
-more-itertools==8.10.0
-mpi4py==3.1.3
-mpmath==0.0.0
-nbclient==0.9.0
-nbconvert==7.16.0
-nbformat==5.9.2
-nest-asyncio==1.6.0
-netifaces==0.11.0
-notebook==7.1.0
-notebook_shim==0.2.4
-numba==0.60.0
-numpy==2.0.1
-nvidia-ml-py3==7.352.0
-oauthlib==3.2.0
-olefile==0.46
-overrides==7.7.0
-packaging==21.3
-pandoc==2.3
-pandocfilters==1.5.1
-paramiko==2.9.3
-parso==0.8.3
-pexpect==4.8.0
-Pillow==9.0.1
-pipenv==11.9.0
-pipreqs==0.4.13
-platformdirs==2.5.1
-pluggy==0.13.0
-plumbum==1.8.2
-ply==3.11
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.10.0
-pycairo==1.20.1
-pycodestyle==2.8.0
-pycparser==2.21
-pycups==2.0.1
-pydocstyle==6.1.1
-pydot==1.4.2
-pyflakes==2.4.0
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-pymol==2.5.0
-PyNaCl==1.5.0
+scikit-learn==1.3.2
+torchvision==0.19.1
+scprep==1.2.3
+wot==1.0.8
+statsmodels==0.14.1
+networkit==11.0.1
+graphriccicurvature==0.5.3.2
 pynndescent==0.5.13
-PyOpenGL==3.1.5
-pyparsing==2.4.7
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-pyRFC3339==1.1
-pytest==6.2.5
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-json-logger==2.0.7
-python-slugify==8.0.1
-pythran==0.10.0
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==24.0.1
-qtconsole==5.5.1
-QtPy==2.4.1
-referencing==0.33.0
-reportlab==3.6.8
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-roman==3.3
-rosdistro-modules==1.0.1
-rospkg-modules==1.5.1
-rpds-py==0.18.0
-scikit-learn==1.5.0
-scipy==1.8.0
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-Send2Trash==1.8.2
-six==1.16.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-soupsieve==2.3.1
-stack-data==0.6.3
-sympy==1.9
-systemd-python==234
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-terminado==0.18.0
-text-unidecode==1.3
-threadpoolctl==3.5.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.1
-trimesh==3.23.5
-types-python-dateutil==2.8.19.20240106
-typing_extensions==4.9.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufoLib2==0.13.1
-ufw==0.36.1
-umap-learn==0.5.6
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-uri-template==1.3.0
-urllib3==1.26.5
-usb-creator==0.3.7
-virtualenv==20.13.0+ds
-virtualenv-clone==0.3.0
-wadllib==1.3.6
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.10
-xdg==5
-xkit==0.0.0
-yarg==0.1.9
-zipp==1.0.0
+seaborn==0.13.2
+umap-learn==0.5.7
+phate==1.0.11
